# pyjigdo

./: .gitignore  .project  .pydevproject  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  pyjigdo.py  pyjigdo.spec  pyjigdo.spec.in  pyjigdo_interface.py  reconfigure  test_downloading.py  test_reactor.py
conf/: Makefile  Makefile.am  Makefile.in  pyjigdo.conf  pyjigdo.desktop
doc/: Makefile.am  pyjigdo.1
po/: Makefile.in.in  POTFILES.in  ca.po  da.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  pyjigdo.pot  ru.po  uk.po  zh_CN.po
pyJigdo/: Makefile.am  __init__.py  __init__.py.in  base.py  cfg.py  cli.py  constants.py  constants.py.in  gui.py  jigdo.py  jigdo_file.py  logger.py  misc.py  progress.py  pyasync.py  reactor.py  translate.py  userinterface.py  util.py
pyjigdo/: Makefile.am  __init__.py.in  base.py  cfg.py  cli.py  constants.py  gui.py  image.py  interfaces.py  jigdo.py  logger.py  misc.py  parse.py  progress.py  translate.py
