PYTHON_FILES = \
    base.py \
    cfg.py \
    cli.py \
    constants.py \
    gui.py \
    __init__.py \
    jigdo.py \
    logger.py \
    misc.py \
    progress.py \
    translate.py

EXTRA_DIST = \
    $(PYTHON_FILES) \
    constants.py.in
    __init__.py.in

pydir = $(pythondir)/pyJigdo
py_PYTHON = $(PYTHON_FILES)
