PYTHON_FILES = \
    base.py \
    constants.py \
    __init__.py \
    jigdo.py \
    logger.py \
    pyasync.py \
    userinterface.py \
    util.py \
    translate.py

EXTRA_DIST = \
    $(PYTHON_FILES) \
    constants.py.in
    __init__.py.in

pydir = $(pythondir)/pyJigdo
py_PYTHON = $(PYTHON_FILES)
