PYTHON_FILES = \
    base.py \
    constants.py \
    __init__.py \
    jigdo_file.py \
    jigdo.py \
    logger.py \
    pyasync.py \
    translate.py \
    userinterface.py \
    util.py 

EXTRA_DIST = \
    $(PYTHON_FILES) \
    constants.py.in \
    __init__.py.in

pydir = $(pythondir)/pyJigdo
py_PYTHON = $(PYTHON_FILES)
