PYTHON_FILES = \
    base.py \
    cli.py \
    constants.py \
    gui.py \
    image.py \
    __init__.py \
    jigdo.py \
    logger.py \
    misc.py \
    parse.py \
    translate.py

EXTRA_DIST = \
    $(PYTHON_FILES) \
    __init__.py.in

pydir = $(pythondir)/pyjigdo
py_PYTHON = $(PYTHON_FILES)
